fix button / menu style on mobile

--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   text-decoration: none;
   line-height: 1;
-  border: 0;
+  // border: 0;
   border-radius: var(--border-radius);
   font-weight: var(--font-weight, 700);
   padding: 1.125em 2em;
