--- a/assets/sass/layout/_main-menu.scss
+++ b/assets/sass/layout/_main-menu.scss
@@ -196,13 +196,6 @@
       width: 100%; 
       left: 0; 
     }
-    
-    @media screen and (max-width: 768px) {
-      font-size: 20px;
-      margin: 8px;
-      justify-content: center;
-
-    }
   }
 }
 
